Add-opens for presto-spark-base
CI actions seem to fail due to this line:
https://github.com/apache/spark/blob/866816eb97002863ec205d854e1397982aecbc5e/core/src/main/scala/org/apache/spark/serializer/SerializationDebugger.scala#L70-L71

Attempting to access an item from sun.security.action